this is second web commit

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -84,7 +84,8 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Bank_managment_system
-jnlp.codebase.type=no.codebase
+jnlp.codebase.type=user
+jnlp.codebase.user=
 jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.mixed.code=default
